# knowrob_data

./: CMakeLists.txt  Dockerfile  README.md  docker_build.sh  package.xml
actions/: README.md
logs/chemlab/dna0/: cram_log.owl
logs/chemlab/dna_extraction_0/: cram_log.owl
logs/humans/: README.md
logs/humans/forth/robohow/pizza0/: catalog-v001.xml  labels.owl
logs/humans/xsens/test/: xsens.owl
logs/robohow/pick-and-place/spoon0/: cram_log.owl
logs/robohow/pick-and-place/spoon1/: cram_log.owl
logs/robohow/pnp/pnp0/: cram_log.owl
logs/robohow/rolling/rolling1/: cram_log.owl
logs/robots/: README.md
logs/robots/cram/dual-arm-pick-and-place/: metadata.xml
logs/robots/cram/pick-and-place/: cram_log.owl  metadata.xml
logs/robots/cram/tablesetting/: 5__kinect_head_rgb_image_color.jpg~  metadata.xml
logs/robots/robosherlock/table-top-scene/: cram_log.owl  metadata.xml
logs/saphari/intrusion_0/: catalog-v001.xml  cram_log.owl
logs/saphari/intrusion_1/: cram_log.owl
logs/saphari/intrusion_2/: cram_log.owl
logs/simulation/: README.md
logs/simulation/pancakemaking_full/: pf_1.owl  pf_10.owl  pf_11.owl  pf_12.owl  pf_13.owl  pf_14.owl  pf_15.owl  pf_16.owl  pf_17.owl  pf_18.owl  pf_19.owl  pf_2.owl  pf_20.owl  pf_3.owl  pf_4.owl  pf_5.owl  pf_6.owl  pf_7.owl  pf_8.owl  pf_9.owl
logs/simulation/robohow/pizza0/: log.owl
logs/simulation/test1/: metadata.xml  test1.owl
logs/simulation/test2_timepoints/: test2.owl
maps/: README.md
objects/: README.md
